Bug#26121 mysqldump includes LOCK TABLES general_log WRITE - Giving the directive '--all-databases' to mysqldump caused   an attempt to lock and dump log tables which don't support this   operation. - With this patch the log tables are excluded from the set of   databases tables to dump.